--- a/sourceNFT/Cargo.toml
+++ b/sourceNFT/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "stylus-hello-world"
-version = "0.1.9"
+name = "stylus_erc721_example"
+version = "0.1.7"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/OffchainLabs/stylus-hello-world"
-repository = "https://github.com/OffchainLabs/stylus-hello-world"
 keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
-description = "Stylus hello world example"
 
 [dependencies]
 alloy-primitives = "=0.7.6"
@@ -14,7 +11,6 @@ alloy-sol-types = "=0.7.6"
 mini-alloc = "0.4.2"
 stylus-sdk = "0.6.0"
 hex = "0.4.3"
-dotenv = "0.15.0"
 
 [dev-dependencies]
 tokio = { version = "1.12.0", features = ["full"] }
@@ -23,11 +19,6 @@ eyre = "0.6.8"
 
 [features]
 export-abi = ["stylus-sdk/export-abi"]
-debug = ["stylus-sdk/debug"]
-
-[[bin]]
-name = "stylus-hello-world"
-path = "src/main.rs"
 
 [lib]
 crate-type = ["lib", "cdylib"]
